[tool.poetry]
name = "ai-memory-system"
version = "0.1.0"
description = "A LangGraph-based memory management system for AI agents"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.0.18"
langchain-core = "^0.1.4"
langchain = "^0.0.312"
langchain-community = "^0.0.13"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
redis = "^5.0.1"
motor = "^3.3.1"
aiokafka = "^0.8.1"
pydantic = "^2.4.2"
ray = {extras = ["serve"], version = "^2.7.0"}
vllm = "^0.2.0"
kubernetes = "^28.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black" 
